--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,6 +29,7 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <div id="currentTime"></div>
     </header>
     <div class="container-lg px-5">
       <!-- Use class for "past", "present", and "future" to apply styles to the
@@ -40,6 +41,80 @@
         in the finished product. Remember to delete this comment once the
         code is implemented.
         -->
+
+        <div id="hour-9" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
+          <textarea class="col-8 col-md-10 description toDo" rows="3"></textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
+  
+        <!-- Example of a a present time block. The "present" class adds a red background color. -->
+        <div id="hour-10" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
+          <textarea class="col-8 col-md-10 description toDo" rows="3"></textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
+  
+        <!-- Example of a future time block. The "future" class adds a green background color. -->
+        <div id="hour-11" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
+          <textarea class="col-8 col-md-10 description toDo" rows="3"></textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
+
+        <div id="hour-11" class="row time-block ">
+          <div class="col-2 col-md-1 hour text-center py-3">12pm</div>
+          <textarea class="col-8 col-md-10 description toDo" rows="3"></textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
+
+        <div id="hour-11" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">1pm</div>
+          <textarea class="col-8 col-md-10 description toDo" rows="3"></textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
+
+        <div id="hour-11" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">2pm</div>
+          <textarea class="col-8 col-md-10 description toDo" rows="3"></textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
+
+        <div id="hour-11" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">3pm</div>
+          <textarea class="col-8 col-md-10 description toDo" rows="3"></textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
+
+        <div id="hour-11" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">4pm</div>
+          <textarea class="col-8 col-md-10 description toDo" rows="3"></textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
+
+        <div id="hour-11" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">5pm</div>
+          <textarea class="col-8 col-md-10 description toDo" rows="3"> </textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script
