--- a/Develop/index.html
+++ b/Develop/index.html
@@ -42,7 +42,7 @@
         code is implemented.
         -->
 
-        <div id="hour-9" class="row time-block">
+        <div id="9" class="row time-block">
           <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
           <textarea class="col-8 col-md-10 description toDo" rows="3"></textarea>
           <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -51,7 +51,7 @@
         </div>
   
         <!-- Example of a a present time block. The "present" class adds a red background color. -->
-        <div id="hour-10" class="row time-block">
+        <div id="10" class="row time-block">
           <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
           <textarea class="col-8 col-md-10 description toDo" rows="3"></textarea>
           <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -60,7 +60,7 @@
         </div>
   
         <!-- Example of a future time block. The "future" class adds a green background color. -->
-        <div id="hour-11" class="row time-block">
+        <div id="11" class="row time-block">
           <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
           <textarea class="col-8 col-md-10 description toDo" rows="3"></textarea>
           <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -68,7 +68,7 @@
           </button>
         </div>
 
-        <div id="hour-11" class="row time-block ">
+        <div id="12" class="row time-block ">
           <div class="col-2 col-md-1 hour text-center py-3">12pm</div>
           <textarea class="col-8 col-md-10 description toDo" rows="3"></textarea>
           <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -76,7 +76,7 @@
           </button>
         </div>
 
-        <div id="hour-11" class="row time-block">
+        <div id="13" class="row time-block">
           <div class="col-2 col-md-1 hour text-center py-3">1pm</div>
           <textarea class="col-8 col-md-10 description toDo" rows="3"></textarea>
           <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -84,7 +84,7 @@
           </button>
         </div>
 
-        <div id="hour-11" class="row time-block">
+        <div id="14" class="row time-block">
           <div class="col-2 col-md-1 hour text-center py-3">2pm</div>
           <textarea class="col-8 col-md-10 description toDo" rows="3"></textarea>
           <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -92,7 +92,7 @@
           </button>
         </div>
 
-        <div id="hour-11" class="row time-block">
+        <div id="15" class="row time-block">
           <div class="col-2 col-md-1 hour text-center py-3">3pm</div>
           <textarea class="col-8 col-md-10 description toDo" rows="3"></textarea>
           <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -100,7 +100,7 @@
           </button>
         </div>
 
-        <div id="hour-11" class="row time-block">
+        <div id="16" class="row time-block">
           <div class="col-2 col-md-1 hour text-center py-3">4pm</div>
           <textarea class="col-8 col-md-10 description toDo" rows="3"></textarea>
           <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -108,7 +108,7 @@
           </button>
         </div>
 
-        <div id="hour-11" class="row time-block">
+        <div id="17" class="row time-block">
           <div class="col-2 col-md-1 hour text-center py-3">5pm</div>
           <textarea class="col-8 col-md-10 description toDo" rows="3"> </textarea>
           <button class="btn saveBtn col-2 col-md-1" aria-label="save">
